stop wide stretching

--- a/css/home.scss
+++ b/css/home.scss
@@ -141,4 +141,12 @@
     width: 100vw;
     max-height: 100% !important;
   }
+
+  .pan-container {
+    height: unset;
+  }
+
+  body {
+    font-size: 18px;
+  }
 }
